--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -7,25 +7,25 @@
 
     <div class='empty'></div>
 
-    <div class='elementData card' [hidden]="!fs.currentTrack || fs.currentTrack.features[0].geometry.coordinates.length < 2">
-      @if (fs.currentTrack) {
+    <div class='elementData card' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
+      @if (present.currentTrack) {
         <table>
           <tr [ngClass]="fs.status">
             <td colspan="2">{{ 'CANVAS.CURTITLE' | translate }}</td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.DISTANCE' | translate }}</td>
-            <td>{{ fs.currentTrack.features[0].properties.totalDistance | number: '1.3' }} km</td>
+            <td>{{ present.currentTrack.features[0].properties.totalDistance | number: '1.3' }} km</td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.EGAIN' | translate }}</td>
-            <td>{{ fs.currentTrack.features[0].properties.totalElevationGain | number: '1.0-0' }} m</td>
+            <td>{{ present.currentTrack.features[0].properties.totalElevationGain | number: '1.0-0' }} m</td>
           </tr>
             <td>{{ 'CANVAS.ELOSS' | translate }}</td>
-            <td>{{ fs.currentTrack.features[0].properties.totalElevationLoss | number: '1.0-0' }} m</td>
+            <td>{{ present.currentTrack.features[0].properties.totalElevationLoss | number: '1.0-0' }} m</td>
           <tr>
             <td>{{ 'CANVAS.TIME' | translate }}</td>
-            <td>{{ fs.currentTrack.features[0].properties.totalTime }}</td>
+            <td>{{ present.currentTrack.features[0].properties.totalTime }}</td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.MOTIONTIME' | translate }}</td>
@@ -33,19 +33,19 @@
           </tr>
           <tr>
             <td>{{ 'CANVAS.POINTS' | translate }}</td>
-            <td>{{ fs.currentTrack.features[0].properties.totalNumber }}</td>
+            <td>{{ present.currentTrack.features[0].properties.totalNumber }}</td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.ALTITUDE' | translate }}</td>
-            @if (fs.currentTrack.features[0].properties.currentAltitude !== undefined) {
-              <td>{{ fs.currentTrack.features[0].properties.currentAltitude | number: '1.0-0' }} m</td>
+            @if (present.currentTrack.features[0].properties.currentAltitude !== undefined) {
+              <td>{{ present.currentTrack.features[0].properties.currentAltitude | number: '1.0-0' }} m</td>
             }
           </tr>
           <tr>
             <td>{{ 'CANVAS.SPEED' | translate }}</td>
             <td>
-              @if (fs.currentTrack.features[0].properties.currentAltitude !== undefined) {
-                <div>{{ fs.currentTrack.features[0].properties.currentSpeed | number: '1.1-1' }} km/h</div>
+              @if (present.currentTrack.features[0].properties.currentAltitude !== undefined) {
+                <div>{{ present.currentTrack.features[0].properties.currentSpeed | number: '1.1-1' }} km/h</div>
               }
             </td>
           </tr>
@@ -65,17 +65,17 @@
               }
             </td>
           </tr>
-          @if (fs.status == 'green' && fs.archivedTrack && fs.currentPoint) {
+          @if (fs.status == 'green' && reference.archivedTrack && fs.currentPoint) {
             <tr>
               <td>{{ 'CANVAS.FROM_START' | translate }}</td>
               <td>
-                <div>{{ fs.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
+                <div>{{ reference.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
               </td>
             </tr>
             <tr>
               <td>{{ 'CANVAS.TO_END' | translate }}</td>
               <td>
-                <div>{{ fs.archivedTrack.features[0].properties.totalDistance - fs.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
+                <div>{{ reference.archivedTrack.features[0].properties.totalDistance - reference.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
               </td>
             </tr>
           }
@@ -83,12 +83,12 @@
       }
     </div>
 
-    <div class='elementCanvas' id='cc0' [hidden]="!fs.currentTrack || fs.currentTrack.features[0].geometry.coordinates.length < 2">
+    <div class='elementCanvas' id='cc0' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
       <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
       <canvas class='canvas' id="currCanvas0" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
     </div>
 
-    <div class='elementCanvas' id='cc1' [hidden]="!fs.currentTrack || fs.currentTrack.features[0].geometry.coordinates.length < 2">
+    <div class='elementCanvas' id='cc1' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
       <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{currentUnit}})</h1>
       <canvas class='canvas' id="currCanvas1" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
     </div>
@@ -104,62 +104,62 @@
     <div class='empty'></div>
 
     <div id="exportArea">
-      <div class='elementData card' [hidden]="!fs.archivedTrack">
-        @if (fs.archivedTrack) {
+      <div class='elementData card' [hidden]="!reference.archivedTrack">
+        @if (reference.archivedTrack) {
           <table>
             <tr>
               <td colspan='2'>{{'CANVAS.ARCTITLE' | translate}}</td>
             </tr>
             <tr>
-              <td colspan='2'>{{fs.archivedTrack.features[0].properties.name}}</td>
+              <td colspan='2'>{{reference.archivedTrack.features[0].properties.name}}</td>
             </tr>
             <tr>
               <td>{{'CANVAS.DISTANCE' | translate}}</td>
-              @if (fs.archivedTrack.features[0].properties.totalDistance > -1) {
+              @if (reference.archivedTrack.features[0].properties.totalDistance > -1) {
                 <td>
-                  {{ fs.archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km
+                  {{ reference.archivedTrack.features[0].properties.totalDistance | number:'1.3' }} km
                 </td>
               }
             </tr>
             <tr>
               <td>{{ 'CANVAS.EGAIN' | translate }}</td>
-              @if (fs.archivedTrack.features[0].properties.totalElevationGain > -1) {
+              @if (reference.archivedTrack.features[0].properties.totalElevationGain > -1) {
                 <td>
-                  {{ fs.archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m
+                  {{ reference.archivedTrack.features[0].properties.totalElevationGain | number:'1.0-0' }} m
                 </td>
               }
             </tr>
             <tr>
               <td>{{ 'CANVAS.ELOSS' | translate }}</td>
-              @if (fs.archivedTrack.features[0].properties.totalElevationLoss > -1) {
+              @if (reference.archivedTrack.features[0].properties.totalElevationLoss > -1) {
                 <td>
-                  {{ fs.archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m
+                  {{ reference.archivedTrack.features[0].properties.totalElevationLoss | number:'1.0-0' }} m
                 </td>
               }
             </tr>
             <tr>
               <td>{{ 'CANVAS.TIME' | translate }}</td>
-              @if (fs.archivedTrack.features[0].properties.totalTime !== undefined) {
+              @if (reference.archivedTrack.features[0].properties.totalTime !== undefined) {
                 <td>
-                  {{ fs.archivedTrack.features[0].properties.totalTime }}
+                  {{ reference.archivedTrack.features[0].properties.totalTime }}
                 </td>
               }
             </tr>
             <tr>
               <td>{{'CANVAS.POINTS' | translate}}</td>
-              <td>{{fs.archivedTrack.features[0].properties.totalNumber}}</td>
+              <td>{{reference.archivedTrack.features[0].properties.totalNumber}}</td>
             </tr>
           </table>
         }
       </div>
 
-      <div class='elementCanvas' id='ac0' [hidden]="!fs.archivedTrack">
+      <div class='elementCanvas' id='ac0' [hidden]="!reference.archivedTrack">
         <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
         <canvas class='canvas' id="archCanvas0" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
       </div>
     </div>
 
-    <div class='elementCanvas' id='ac1' [hidden]="!fs.archivedTrack">
+    <div class='elementCanvas' id='ac1' [hidden]="!reference.archivedTrack">
       <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{archivedUnit}})</h1>
       <canvas class='canvas' id="archCanvas1" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
     </div>
@@ -173,15 +173,15 @@
 
   <swiper-slide>
     <div class='empty'></div>
-    <div class='elementData card' [hidden]="!fs.archivedTrack">
-      @if (fs.archivedTrack) {
+    <div class='elementData card' [hidden]="!reference.archivedTrack">
+      @if (reference.archivedTrack) {
         <table class="partials">
           <tr>
             <td colspan='3'>{{'CANVAS.ARCTITLE' | translate}}</td>
           </tr>
           <tr>
             <td colspan='3'>
-                {{fs.archivedTrack.features[0].properties.name}}
+                {{reference.archivedTrack.features[0].properties.name}}
             </td>
           </tr>
           @for (ps of partialSpeeds; track i; let i = $index) {
