--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -10,7 +10,7 @@
     <div class='elementData card' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
       @if (present.currentTrack) {
         <table>
-          <tr [ngClass]="fs.status">
+          <tr [ngClass]="audio.status">
             <td colspan="2">{{ 'CANVAS.CURTITLE' | translate }}</td>
           </tr>
           <tr>
@@ -29,7 +29,7 @@
           </tr>
           <tr>
             <td>{{ 'CANVAS.MOTIONTIME' | translate }}</td>
-            <td>{{ fs.currentMotionTime }}</td>
+            <td>{{ currentMotionTime }}</td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.POINTS' | translate }}</td>
@@ -52,30 +52,30 @@
           <tr>
             <td>{{ 'CANVAS.AVGSPEED' | translate }}</td>
             <td>
-              @if (fs.currentAverageSpeed !== undefined) {
-                <div>{{ fs.currentAverageSpeed | number: '1.1-1' }} km/h</div>
+              @if (currentAverageSpeed !== undefined) {
+                <div>{{ currentAverageSpeed | number: '1.1-1' }} km/h</div>
               }
             </td>
           </tr>
           <tr>
             <td>{{ 'CANVAS.MOTIONAVGSPEED' | translate }}</td>
             <td>
-              @if (fs.currentMotionSpeed !== undefined) {
-                <div>{{ fs.currentMotionSpeed | number: '1.1-1' }} km/h</div>
+              @if (currentMotionSpeed !== undefined) {
+                <div>{{ currentMotionSpeed | number: '1.1-1' }} km/h</div>
               }
             </td>
           </tr>
-          @if (fs.status == 'green' && reference.archivedTrack && fs.currentPoint) {
+          @if (audio.status == 'green' && reference.archivedTrack && location.currentPoint) {
             <tr>
               <td>{{ 'CANVAS.FROM_START' | translate }}</td>
               <td>
-                <div>{{ reference.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
+                <div>{{ reference.archivedTrack.features[0].geometry.properties.data[location.currentPoint].distance | number: '1.3' }} km</div>
               </td>
             </tr>
             <tr>
               <td>{{ 'CANVAS.TO_END' | translate }}</td>
               <td>
-                <div>{{ reference.archivedTrack.features[0].properties.totalDistance - reference.archivedTrack.features[0].geometry.properties.data[fs.currentPoint].distance | number: '1.3' }} km</div>
+                <div>{{ reference.archivedTrack.features[0].properties.totalDistance - reference.archivedTrack.features[0].geometry.properties.data[location.currentPoint].distance | number: '1.3' }} km</div>
               </td>
             </tr>
           }
@@ -85,12 +85,12 @@
 
     <div class='elementCanvas' id='cc0' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
       <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-      <canvas class='canvas' id="currCanvas0" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
+      <canvas class='canvas' id="currCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
     <div class='elementCanvas' id='cc1' [hidden]="!present.currentTrack || present.currentTrack.features[0].geometry.coordinates.length < 2">
       <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{currentUnit}})</h1>
-      <canvas class='canvas' id="currCanvas1" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
+      <canvas class='canvas' id="currCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
     <div class='empty'></div>
@@ -155,13 +155,13 @@
 
       <div class='elementCanvas' id='ac0' [hidden]="!reference.archivedTrack">
         <h1 class='title'>{{'CANVAS.CANVASALTITUDE' | translate}}</h1>
-        <canvas class='canvas' id="archCanvas0" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
+        <canvas class='canvas' id="archCanvas0" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
       </div>
     </div>
 
     <div class='elementCanvas' id='ac1' [hidden]="!reference.archivedTrack">
       <h1 class='title'>{{'CANVAS.CANVASSPEED' | translate}} ({{archivedUnit}})</h1>
-      <canvas class='canvas' id="archCanvas1" [attr.width]="fs.canvasNum" [attr.height]="fs.canvasNum"></canvas>
+      <canvas class='canvas' id="archCanvas1" [attr.width]="canvasNum" [attr.height]="canvasNum"></canvas>
     </div>
 
     <div class='empty'></div>
