native foreground service and location reading

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -67,7 +67,7 @@
     </ion-select>
   </ion-item>
 
-  <!-- Audio alert on / off -->
+  <!-- Audio alert on / off 
   <ion-item lines="none" class="selector">
     <ion-label>{{ 'SETTINGS.AUDIO_ALERT' | translate }}</ion-label>
     <ion-select
@@ -80,7 +80,7 @@
         <ion-select-option [value]="alert">{{ alert }}</ion-select-option>
       }
     </ion-select>
-  </ion-item>
+  </ion-item> -->
 
   <!-- Geocoding service selector -->
   <ion-item lines="none" class="selector">
